home.html -place bootstrap localy - move buttons on bottom, make it fixed - add eruda for debug on mobile devices,

--- a/image_picker/static/image_picker/css/main.css
+++ b/image_picker/static/image_picker/css/main.css
@@ -11,6 +11,13 @@
     padding: 10px;
 }
 
+.buttons-panel {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left:0;
+  height: auto;
+}
 /* sidenav */
 
 .sidenav {
